deploy/aro/catalog-api/catalog-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: catalogapi
  name: catalog-public-route
spec:
#  host: __CatalogPublicHostName__
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: catalogapi
#  tls:
#    termination: edge
#    key: __PrivateKey3__
#    certificate: __Certificate3__
#    caCertificate: __CaCertificate3__
